------------------------------------------------------------------------------
  features                                                               NEWS
------------------------------------------------------------------------------


First version

    o Released August 12, 2011.