@@ -1,7 +1,9 @@
-175bc313672d6fbcb5f2b11461a0bc7b *DESCRIPTION
-bcd2913c0840fdfafe086dbc49247351 *NAMESPACE
-b3db2dfc4746971dfdf5d71a47628ef6 *NEWS
-d6dacb1f2fdf3f2eaac98295a7c1bb72 *R/features.R
+57c8aadf7e672b6f1e6c15956e54c216 *DESCRIPTION
+311e81f20566c440b5285a17d05aabf4 *NAMESPACE
+f075b4a5ea3db32a2ca8d19d549e8210 *NEWS
+06dc6bd8d0548a28bce0fd73af574313 *R/features.R
 04149137bf18d48ecbd6860ca199f42c *demo/00Index
 abcaca1fdb8a918992a4dba7fda08737 *demo/features.R
-0bc583ddaf389692b3014a6a8efc6382 *man/features.Rd
+3091ea1a1761951c9ded9ba6852daa12 *man/features.Rd
+262f68456d2eacfeb46e90fd5c512dcb *man/fget.features.Rd
+ff4ca7b88223ecfdf4931466b87fa85d *man/plot.features.Rd
